# medieval-settlement-threejs

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.screenshot.config.ts
artifacts/: final-requirement-audit.md
balance/: gameBalance.json
docs/: SEASONS_AND_TIME.md
e2e/: smoke.spec.ts
scripts/: derive_pbr_maps.py  economyFormulaExpectations.ts  generateGameBalance.mts  generateWorldBootstrap.mts  run-all-tests.mts  testBackyardGardenPlacement.mts  testChapelCommunity.mts  (+13 more)
server/: Cargo.toml  deploy-local-clean.ps1  deploy-local.ps1
server/logic/: Cargo.toml
server/logic/src/: lib.rs
server/src/: balance_generated.rs  burgage.rs  constants.rs  db.rs  economy.rs  lib.rs  lifecycle.rs  placement_validation.rs  tables.rs
server/src/economy/: aggregate_spend.rs  chapel_coffer.rs  commodities.rs  mod.rs  parish_accounting.rs  population.rs  population_policy.rs  storage.rs  village_economy.rs
server/src/reducers/: bootstrap.rs  buildings.rs  cheats.rs  mod.rs  residences.rs  simulation.rs  village_admin.rs  world_configuration.rs  world_reset.rs
server/src/simulation/: backyard_garden.rs  chapel.rs  chapel_community.rs  chapel_parish.rs  construction.rs  delivery_cargo.rs  delivery_trips.rs  expanded_economy.rs  food_supplier.rs  game_calendar.rs  labor_schedule.rs  landmark_access.rs  mod.rs  road_logistics.rs  village_storehouse.rs  woodcutters_lodge.rs
server/src/simulation/residence_needs/: firewood.rs  kinds.rs  mod.rs  state.rs  supply.rs
server/src/world_gen/: mod.rs
src/: main.ts  (+1 more)
(+182 files in other folders)
