[package]
name = "medieval-road-system-server"
version = "0.1.0"
edition = "2021"
description = "SpacetimeDB module - authoritative server for Medieval Road System"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
spacetimedb = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
